# c-dev-env

./: .gitignore  .gitmodules  Dockerfile  README.md  build-image.sh  container-run-mount-fs.sh
my_project/: CMakeLists.txt  hello_test.cpp
project/: CMakeLists.txt  cmake-build.sh  hello_test.cpp  main.c
